[package]
name = "pug"
version = "0.1.9"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
flate2 = "1"
inquire = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
tempfile = "3"
toml = "0.9"
walkdir = "2"
zip = "0.6"
zstd = "0.13"
